--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
 {% block header %}CPAR Senior Projects Home{% endblock %}
 {% block main %}
 <h1 style="text-align:center;"> Welcome to the CPAR Senior Project Website!</h1>
-<!-- button that triggers the CAS login -->
+<button style="text-align:center;" onclick="location.href='/projects'">View CPAR Projects</button>
+<!-- button that triggers the CAS login, would we need to add post method -->
 {% endblock %}
 
 
