--- a/templates/project_nav.html
+++ b/templates/project_nav.html
@@ -6,11 +6,13 @@
 <h1>Projects</h1>
 <div class="project-thumbnails">
     {% for project in projects %}
-        <div class="project-thumbnail">
-            <img src="{{ project.thumbnail_path }}" alt="{{ project.project_title }}">
-            <h2>{{ project.project_title }}</h2> 
-            <p> by {{ project.student_path }}</p>          
-         </div>
+        <a href="{{ project.url }}" class="project-thumbnail">
+            <div>
+                <img src="{{ project.thumbnail_path }}" alt="{{ project.project_title }}">
+                <h2>{{ project.project_title }}</h2> 
+                <p> by {{ project.student_name }}</p>          
+            </div>
+        </a>
     {% endfor %}
 </div>
 
