--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1, width=device-width" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles.css') }}">
-  <link href="/static/star.ico" rel="icon" />
+  <link href="/CPSC 490 Final Project/static" rel="icon" />
   <script src="https://kit.fontawesome.com/9b9fb80ca2.js" crossorigin="anonymous"></script>
 
   <head>
