--- a/templates/project_details.html
+++ b/templates/project_details.html
@@ -7,10 +7,11 @@
 <a href="/projects" class="btn btn-primary">Back to All Projects</a>
 
 <h1>{{ project.project_title }}</h1>
+<img src="{{ project.thumbnail_path }}" alt="{{ project.thumbnail_alt }}">
 <h2>by {{ project.student_name }}</h3>
 <h3>{{ project.track }} Track</h3>
 <h3>{{ project.classyear }}</h3>
-<img src="{{ project.thumbnail_path }}" alt="{{ project.thumbnail_alt }}">
+<img src="{{ project.image1_path }}" alt="{{ project.image1_alt }}">
 <p>{{ project.project_description }}</p>
 
 {% endblock %}
