--- a/templates/newproject.html
+++ b/templates/newproject.html
@@ -6,7 +6,7 @@
 
 
 <h1>New Project Upload</h1>
-<form action="/newproject" method="post" enctype="multipart/form-data">
+<form action="/newproject" method="post" enctype="multipart/form-data" class="newproject">
   <div class="form-group">
     <label for="student_name">Student Name</label>
     <input type="text" class="form-control" id="student_name" name="student_name" placeholder="ex: Scott Petersen">
@@ -92,6 +92,11 @@
     <label for="video2_alt">Video 2 Alt text/caption</label>
     <textarea class="form-control" id="video2_alt" name="video2_alt" rows="2" placeholder="Audio clip of choral, jazzy music"></textarea>
   </div>
+  <br>
+    <div class="form-group">
+      <label for="sourcecode">Upload Source Code zip</label>
+      <input type="file" class="form-control-file" id="sourcecode" name="sourcecode">
+    </div>
   <br>
 
   <button type="submit" class="btn btn-primary my-1">Upload to Database</button>
