--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,16 @@
 {% extends "layout.html" %}
 
+<!-- This is the homepage, the text can be updated as relevant! -->
 {% block title %}CPAR Senior Projects{% endblock %}
 {% block header %}CPAR Senior Projects Home{% endblock %}
 {% block main %}
 <h1 style="text-align:center;"> Welcome to the CPAR Senior Project Website!</h1>
+<p style="text-align:center; line-height: 0.5em"> Here you can see projects from previous students in the Computing and the Arts major.</p>
+<p style="text-align:center; line-height: 0.5em" line-height: 1em> Computing and the Arts is a relatively new major at Yale and is a multidisciplinary program with coursework in Computer Science</p>
+<p style="text-align:center; line-height: 0.5em"> as well as one of five Art tracks: Art, Music, Theater, Architecture and Art History. </p>
+<br>
 <div class="container2">
     <button onclick="location.href='/projects'">View CPAR Projects</button>
-    <!-- button that triggers the CAS login, would we need to add post method -->
     </div>
 </div>
 
