--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,13 +2,14 @@
 
 <html lang="en">
 
+<!-- This is the jinja template that helps set up the layout for the other templates! -->
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1, width=device-width" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles.css') }}">
   <link href="./static/favicon.ico" rel="icon" type="image/x-icon" />
   <script src="https://kit.fontawesome.com/9b9fb80ca2.js" crossorigin="anonymous"></script>
-
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <head>
     <style>
       body {
