--- a/templates/project_nav.html
+++ b/templates/project_nav.html
@@ -3,14 +3,17 @@
 {% block title %}CPAR Senior Projects{% endblock %}
 {% block header %}CPAR Senior Projects{% endblock %}
 {% block main %}
-<h1 >Projects</h1>
+<h1 style="text-align:center;"> Welcome to the CPAR Senior Project Website!</h1>
+<p style="text-align:center; line-height: 0.5em"> Here you can see projects from previous students in the Computing and the Arts major.</p>
+<p style="text-align:center; line-height: 0.5em" line-height: 1em> Computing and the Arts is a relatively new major at Yale and is a multidisciplinary program with coursework in Computer Science</p>
+<p style="text-align:center; line-height: 0.5em"> as well as one of five Art tracks: Art, Music, Theater, Architecture and Art History. </p>
+<br>
 
-<!-- Dropdowns for selecting graduation years and track -->
+<!-- Dropdowns for filtering by graduation years and track -->
 <div class="dropdowns">
     <div>
         <label for="classyear">Graduation Year</label>
         <select class="form-control" id="classyear" name="classyear">
-            <!-- The first option is a placeholder for "All" -->
             <option value="">All</option>
             {% for year in classyear_options %}
                 <option value="{{ year }}">{{ year }}</option>
@@ -32,8 +35,59 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
 
-<!-- Dropdown changes and filtering -->
+<!-- Script for dropdown filtering -->
 <script>
+    $('#classyear, #track').change(function () {
+        var selectedYear = $('#classyear').val();
+        var selectedTrack = $('#track').val();
+    
+        // Hide all project thumbnails to start then render
+        $('.project-thumbnail').addClass('hidden');
+    
+        // Filter projects based on selected year and track
+        if (selectedYear && selectedTrack) {
+            // Display only projects matching both the year and track chosen
+            $('.project-thumbnail[data-classyear="' + selectedYear + '"][data-track="' + selectedTrack + '"]').removeClass('hidden');
+        } else if (selectedYear) {
+            // Display only projects matching the year chosen
+            $('.project-thumbnail[data-classyear="' + selectedYear + '"]').removeClass('hidden');
+        } else if (selectedTrack) {
+            // Display only projects matching the track chosen
+            $('.project-thumbnail[data-track="' + selectedTrack + '"]').removeClass('hidden');
+        } else {
+            // If no year or track is selected, display all projects
+            $('.project-thumbnail').removeClass('hidden');
+        }
+    
+        // Check if there are visible projects after applying filters
+        var visibleProjects = $('.project-thumbnail:not(.hidden)').length;
+    
+        // Show or hide the "No projects found" message based on visibility
+        if (visibleProjects === 0) {
+            $('#no-projects-message').removeClass('hidden');
+        } else {
+            $('#no-projects-message').addClass('hidden');
+        }
+    });
+    
+    </script>
+    
+    <!-- For rendering the project thumbnails -->
+    <div class="project-thumbnails">
+        {% for project in projects %}
+            <a href="{{ project.url }}" class="project-thumbnail" data-classyear="{{ project.classyear }}" data-track="{{ project.track }}">
+                    <img src="{{ project.thumbnail_path }}" alt="{{ project.thumbnail_alt }}">
+                    <div class="project-thubnail-label">
+                        <h2>{{ project.project_title }}</h2> 
+                        <p> by {{ project.student_name }}</p>
+                    </div>        
+            </a>
+        {% endfor %}
+    </div>
+    
+    <!-- Message for no projects found -->
+    <p id="no-projects-message" class="hidden">No projects found. Try a different filter or select "All".</p>
+<!-- <script>
 $('#classyear, #track').change(function () {
     var selectedYear = $('#classyear').val();
     var selectedTrack = $('#track').val();
@@ -43,23 +97,24 @@ $('#classyear, #track').change(function () {
 
     // Filter projects based on selected year and track
     if (selectedYear && selectedTrack) {
-        // Display only projects matching both the selected year and track
+        // Display only projects matching both the year and track chosen
         $('.project-thumbnail[data-classyear="' + selectedYear + '"][data-track="' + selectedTrack + '"]').removeClass('hidden');
     } else if (selectedYear) {
-        // Display only projects matching the selected year
+        // Display only projects matching the year chosen
         $('.project-thumbnail[data-classyear="' + selectedYear + '"]').removeClass('hidden');
     } else if (selectedTrack) {
-        // Display only projects matching the selected track
+        // Display only projects matching the track chosen
         $('.project-thumbnail[data-track="' + selectedTrack + '"]').removeClass('hidden');
     } else {
-        // If no year or track is selected, display all 
+        // If no year or track is selected, display all projects
         $('.project-thumbnail').removeClass('hidden');
     }
 });
 
-</script>
+</script> -->
 
-<div class="project-thumbnails">
+<!-- For rendering the project thumbnails -->
+<!-- <div class="project-thumbnails">
     {% for project in projects %}
         <a href="{{ project.url }}" class="project-thumbnail" data-classyear="{{ project.classyear }}" data-track="{{ project.track }}">
                 <img src="{{ project.thumbnail_path }}" alt="{{ project.thumbnail_alt }}">
@@ -72,7 +127,7 @@ $('#classyear, #track').change(function () {
     {% if not projects %}
         <p>No projects found. Try a different filter or select "All".</p>
     {% endif %}
-</div>
+</div> -->
 
 
 
