polishing and moving things around

--- a/templates/forbidden.html
+++ b/templates/forbidden.html
@@ -1,8 +1,10 @@
+<!--Template seen when someone tries to access something they don't have permission for.-->
+
 {% extends "layout.html" %}
 
 {% block title %}Access Forbidden{% endblock %}
 {% block header %}You do not have permission to access this page.{% endblock %}
 {% block main %}
 <h1>You do not have permission to access this page.</h1>
-
+<p>Contact Scott Petersen, scott.petersen@yale.edu for access.</p>
 {% endblock %}
