--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
+<!-- This is the retired homepage, I just kept it in case we ever bring it back! -->
+
 {% extends "layout.html" %}
 
-<!-- This is the homepage, the text can be updated as relevant! -->
 {% block title %}CPAR Senior Projects{% endblock %}
 {% block header %}CPAR Senior Projects Home{% endblock %}
 {% block main %}
