--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,8 +1,9 @@
+<!-- This is the Jinja template that helps set up the layout for the other templates! -->
+
 <!DOCTYPE html>
 
 <html lang="en">
 
-<!-- This is the jinja template that helps set up the layout for the other templates! -->
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1, width=device-width" />
