--- a/templates/project_nav.html
+++ b/templates/project_nav.html
@@ -1,3 +1,4 @@
+<!-- Homepage where you can see all the projects! -->
 {% extends "layout.html" %}
 
 {% block title %}CPAR Senior Projects{% endblock %}
@@ -35,34 +36,34 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
 
-<!-- Script for dropdown filtering -->
+<!-- Dropdown filtering -->
 <script>
     $('#classyear, #track').change(function () {
         var selectedYear = $('#classyear').val();
         var selectedTrack = $('#track').val();
     
-        // Hide all project thumbnails to start then render
+        //Hide all project thumbnails to start then render
         $('.project-thumbnail').addClass('hidden');
     
-        // Filter projects based on selected year and track
+        //Filter projects based on selected year and track
         if (selectedYear && selectedTrack) {
-            // Display only projects matching both the year and track chosen
+            //Display only projects matching both the year and track chosen
             $('.project-thumbnail[data-classyear="' + selectedYear + '"][data-track="' + selectedTrack + '"]').removeClass('hidden');
         } else if (selectedYear) {
-            // Display only projects matching the year chosen
+            //Display only projects matching the year chosen
             $('.project-thumbnail[data-classyear="' + selectedYear + '"]').removeClass('hidden');
         } else if (selectedTrack) {
-            // Display only projects matching the track chosen
+            //Display only projects matching the track chosen
             $('.project-thumbnail[data-track="' + selectedTrack + '"]').removeClass('hidden');
         } else {
-            // If no year or track is selected, display all projects
+            //If no year or track is selected, display all projects
             $('.project-thumbnail').removeClass('hidden');
         }
     
-        // Check if there are visible projects after applying filters
+        //Check if there are visible projects after applying filters
         var visibleProjects = $('.project-thumbnail:not(.hidden)').length;
     
-        // Show or hide the "No projects found" message based on visibility
+        //Show or hide the "No projects found" message based on visibility
         if (visibleProjects === 0) {
             $('#no-projects-message').removeClass('hidden');
         } else {
@@ -86,49 +87,7 @@
     </div>
     
     <!-- Message for no projects found -->
-    <p id="no-projects-message" class="hidden">No projects found. Try a different filter or select "All".</p>
-<!-- <script>
-$('#classyear, #track').change(function () {
-    var selectedYear = $('#classyear').val();
-    var selectedTrack = $('#track').val();
-
-    // Hide all project thumbnails to start then render
-    $('.project-thumbnail').addClass('hidden');
-
-    // Filter projects based on selected year and track
-    if (selectedYear && selectedTrack) {
-        // Display only projects matching both the year and track chosen
-        $('.project-thumbnail[data-classyear="' + selectedYear + '"][data-track="' + selectedTrack + '"]').removeClass('hidden');
-    } else if (selectedYear) {
-        // Display only projects matching the year chosen
-        $('.project-thumbnail[data-classyear="' + selectedYear + '"]').removeClass('hidden');
-    } else if (selectedTrack) {
-        // Display only projects matching the track chosen
-        $('.project-thumbnail[data-track="' + selectedTrack + '"]').removeClass('hidden');
-    } else {
-        // If no year or track is selected, display all projects
-        $('.project-thumbnail').removeClass('hidden');
-    }
-});
-
-</script> -->
-
-<!-- For rendering the project thumbnails -->
-<!-- <div class="project-thumbnails">
-    {% for project in projects %}
-        <a href="{{ project.url }}" class="project-thumbnail" data-classyear="{{ project.classyear }}" data-track="{{ project.track }}">
-                <img src="{{ project.thumbnail_path }}" alt="{{ project.thumbnail_alt }}">
-                <div class="project-thubnail-label">
-                    <h2>{{ project.project_title }}</h2> 
-                    <p> by {{ project.student_name }}</p>
-                </div>        
-        </a>
-    {% endfor %}
-    {% if not projects %}
-        <p>No projects found. Try a different filter or select "All".</p>
-    {% endif %}
-</div> -->
-
+    <p id="no-projects-message" class="hidden">No projects found. Try a different combination of filters or select "All".</p>
 
 
 {% endblock %}
