--- a/templates/project_nav.html
+++ b/templates/project_nav.html
@@ -7,7 +7,7 @@
 <h1 style="text-align:center;"> Welcome to the CPAR Senior Project Website!</h1>
 <p style="text-align:center; line-height: 0.5em"> Here you can see projects from previous students in the Computing and the Arts major.</p>
 <p style="text-align:center; line-height: 0.5em" line-height: 1em> Computing and the Arts is a relatively new major at Yale and is a multidisciplinary program with coursework in Computer Science</p>
-<p style="text-align:center; line-height: 0.5em"> as well as one of five Art tracks: Art, Music, Theater, Architecture and Art History. </p>
+<p style="text-align:center; line-height: 0.5em"> as well as one of five Art tracks: Art, Music, Theater, Architecture, and Art History. </p>
 <br>
 
 <!-- Dropdowns for filtering by graduation years and track -->
